--- a/src/output.css
+++ b/src/output.css
@@ -554,86 +554,8 @@ video {
   display: none;
 }
 
-.container {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
 .fixed {
   position: fixed;
-}
-
-.m-\[5px\] {
-  margin: 5px;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.my-\[\] {
-  margin-top: ;
-  margin-bottom: ;
-}
-
-.my-\[28px\] {
-  margin-top: 28px;
-  margin-bottom: 28px;
-}
-
-.mx-\[10px\] {
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.mx-\[30px\] {
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-.my-\[5px\] {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.mx-\[5px\] {
-  margin-left: 5px;
-  margin-right: 5px;
 }
 
 .mx-\[15px\] {
@@ -641,33 +563,50 @@ video {
   margin-right: 15px;
 }
 
+.mx-\[30px\] {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.my-\[28px\] {
+  margin-top: 28px;
+  margin-bottom: 28px;
+}
+
 .flex {
   display: flex;
+}
+
+.size-\[24px\] {
+  width: 24px;
+  height: 24px;
+}
+
+.size-\[14px\] {
+  width: 14px;
+  height: 14px;
+}
+
+.size-\[px\] {
+  width: px;
+  height: px;
+}
+
+.size-\[5px\] {
+  width: 5px;
+  height: 5px;
 }
 
 .justify-center {
   justify-content: center;
 }
 
-.text-ellipsis {
-  text-overflow: ellipsis;
+.justify-between {
+  justify-content: space-between;
 }
 
 .font-semibold {
   font-weight: 600;
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.text-\[\#F03E3E\] {
-  --tw-text-opacity: 1;
-  color: rgb(240 62 62 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\#\] {
-  color: #;
 }
 
 .text-\[\#010101\] {
@@ -675,40 +614,9 @@ video {
   color: rgb(1 1 1 / var(--tw-text-opacity, 1));
 }
 
-@media (min-width: 1280px) {
-  .xl\:container {
-    width: 100%;
-  }
-
-  @media (min-width: 640px) {
-    .xl\:container {
-      max-width: 640px;
-    }
-  }
-
-  @media (min-width: 768px) {
-    .xl\:container {
-      max-width: 768px;
-    }
-  }
-
-  @media (min-width: 1024px) {
-    .xl\:container {
-      max-width: 1024px;
-    }
-  }
-
-  @media (min-width: 1280px) {
-    .xl\:container {
-      max-width: 1280px;
-    }
-  }
-
-  @media (min-width: 1536px) {
-    .xl\:container {
-      max-width: 1536px;
-    }
-  }
+.text-\[\#F03E3E\] {
+  --tw-text-opacity: 1;
+  color: rgb(240 62 62 / var(--tw-text-opacity, 1));
 }
 
 @media (min-width: 1536px) {
